--- a/resume/style.css
+++ b/resume/style.css
@@ -1,3 +1,23 @@
+/*Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px){
+
+}
+/*Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+}
+/*Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
+}
+@media (max-width: 950px){
+
+}
+
 /*main style for my resume */
 
 #container{
@@ -80,24 +100,4 @@ img.headshot {
   border-color: #FFFFFF;
   border-width: thick;
   border-radius: 50%;
-}
-
-/*Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px){
-
-}
-
-/*Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-
-}
-
-/*Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
-}
-
-/* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {
-
 }
