--- a/resume/style.css
+++ b/resume/style.css
@@ -1,6 +1,14 @@
 /*Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px)and (max-width: 767.98px){
-
+  #container {
+    width: 50%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-bottom: 75px;
+    font-family: 'lato', sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+  }
 }
 /*Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px){
