--- a/resume/style.css
+++ b/resume/style.css
@@ -9,6 +9,11 @@
     font-size: 1em;
     font-weight: 400;
   }
+
+  .row{
+    width: 50%;
+    max-width: 700px;
+  }
 }
 /*Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px){
