--- a/resume/style.css
+++ b/resume/style.css
@@ -1,7 +1,7 @@
 /*Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px)and (max-width: 767.98px){
   #container {
-    width:700px%;
+    width:700px;
     max-width: 700px;
     margin: 0 auto;
     padding-bottom: 75px;
