--- a/resume/style.css
+++ b/resume/style.css
@@ -11,7 +11,9 @@
 }
 /*Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px){
-
+  #container {
+    width:800px;
+  }
 }
 /*Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px){
