--- a/resume/style.css
+++ b/resume/style.css
@@ -96,7 +96,7 @@ img.headshot {
   }
 }
 /*Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px){
+@media screen and (max-width: 991.98px){
   #container {
     width:800px;
   }
