--- a/resume/style.css
+++ b/resume/style.css
@@ -88,24 +88,48 @@ img.headshot {
 @media screen and (max-width: 767.98px){
   img.center {
     display: block;
-    max-width: 700px;
+    max-width: 750px;
     margin: 0 auto;
   }
   .row{
-    width: 750px;
+    max-width: 700px;
   }
 
 
 }
 /*Medium devices (tablets, 768px and up) */
 @media screen and (max-width: 991.98px){
-
+  img.center {
+    display: block;
+    max-width: 990px;
+    margin: 0 auto;
+  }
+  .row{
+    max-width: 950px;
+  }
 }
 /*Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px){
-
+  img.center {
+    display: block;
+    min-width: 1000px;
+    margin: 0 auto;
+  }
+  .row{
+    min-width: 1000px;
+    max-width: 1100px;
+  }
 }
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
+  img.center {
+    display: block;
+    min-width: 1200px;
+    margin: 0 auto;
+  }
+  .row{
+    min-width: 1200px;
+    max-width: 1400px;
+  }
 
 }
