--- a/resume/style.css
+++ b/resume/style.css
@@ -101,7 +101,7 @@ img.headshot {
 @media screen and (max-width: 991.98px){
   img.center {
     display: block;
-    max-width: 990px;
+    max-width: 100%;
     margin: 0 auto;
   }
   .row{
