--- a/resume/style.css
+++ b/resume/style.css
@@ -87,13 +87,22 @@ img.headshot {
 /*Small devices (landscape phones, 576px and up) */
 @media screen and (max-width: 767.98px){
   img.center {
-    display: block;
     margin: 0 auto;
     width: 100%;
   }
   .row{
     max-width: 650px;
     padding-left: 20px;
+  }
+
+  img.headshot {
+    margin-top: -70px;
+    width: 145px;
+    margin-left: 42px;
+    border-style: solid;
+    border-color: #FFFFFF;
+    border-width: thick;
+    border-radius: 50%;
   }
 
 }
