--- a/resume/style.css
+++ b/resume/style.css
@@ -98,11 +98,7 @@ img.headshot {
   img.headshot {
     margin-top: -70px;
     width: 100px;
-    margin-left: 42px;
-    border-style: solid;
-    border-color: #FFFFFF;
-    border-width: thick;
-    border-radius: 50%;
+    margin-left: 30px;
   }
 
 }
@@ -116,6 +112,12 @@ img.headshot {
   .row{
     max-width: 900px;
     padding-left: 20px;
+  }
+
+  img.headshot {
+    margin-top: -90px;
+    width: 130px;
+    margin-left: 35px;
   }
 }
 /*Large devices (desktops, 992px and up) */
@@ -131,6 +133,11 @@ img.headshot {
     max-width: 1100px;
     padding-left: 20px;
   }
+  img.headshot {
+    margin-top: -90px;
+    width: 175px;
+    margin-left: 40px;
+  }
 }
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
@@ -145,6 +152,11 @@ img.headshot {
     min-width: 1200px;
     max-width: 1400px;
     padding-left: 20px;
+  }
+  img.headshot {
+    margin-top: -100px;
+    width: 175px;
+    margin-left: 42px;
   }
 
 }
