--- a/resume/style.css
+++ b/resume/style.css
@@ -95,10 +95,14 @@ img.headshot {
     padding-left: 10px;
   }
 
+  .col-3 {
+    min-width: 150px;
+  }
+
   img.headshot {
-    margin-top: -70px;
+    margin-top: -50px;
     width: 100px;
-    margin-left: 30px;
+    margin-left: 20px;
   }
 
   #container{
@@ -107,7 +111,7 @@ img.headshot {
     padding-bottom: 45px;
     font-family: 'lato', sans-serif;
     font-size: 0.5em;
-    font-weight: 200;
+    font-weight: 100;
   }
 
 }
