--- a/resume/style.css
+++ b/resume/style.css
@@ -87,6 +87,7 @@ img.headshot {
 /*Small devices (landscape phones, 576px and up) */
 @media screen and (max-width: 767.98px){
   img.center {
+    display: block;
     margin: 0 auto;
     width: 100%;
   }
