--- a/resume/style.css
+++ b/resume/style.css
@@ -74,9 +74,8 @@ img.center {
 }
 
 img.headshot {
-  margin-top: -100px;
-  width: 175px;
   max-width: 1200px;
+  min-width: 100px;
   margin-left: 42px;
   border-style: solid;
   border-color: #FFFFFF;
@@ -86,29 +85,16 @@ img.headshot {
 
 /*Small devices (landscape phones, 576px and up) */
 @media screen and (max-width: 767.98px){
-  img.center {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-  }
+
   .row{
     max-width: 650px;
     padding-left: 10px;
   }
 
   img.headshot {
-    margin-top: 20px;
-    width: 90px;
-    margin-left: 10px;
+    max-width: 100%;
+    margin-top: -50px;
   }
-
-.col-9 {
-  max-width: 400px;
-}
-
-.col-3 {
-  max-width: 200px;
-}
 
 }
 /*Medium devices (tablets, 768px and up) */
