--- a/HTML Frame Project/stylesheet.css
+++ b/HTML Frame Project/stylesheet.css
@@ -1,17 +1,17 @@
-.imagefiller{
-  width: 65%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 10px;
-  padding-bottom: 35px;
-}
-
 .top {
   max-width: 800px;
   margin: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.figure {
+  width: 65%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
 
 
